/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'application'
    id 'java-library'
    id 'maven-publish'
    id 'java'
    id 'org.graalvm.buildtools.native' version '0.9.25'
    id 'signing'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    api 'org.apache.commons:commons-lang3:3.17.0'
    api 'commons-cli:commons-cli:1.9.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
}

group = 'io.reliza'
version = '2023.07.5'
description = 'versioning'
java.sourceCompatibility = JavaVersion.VERSION_17
java.targetCompatibility = JavaVersion.VERSION_17

task changeVersion {
	doLast {
		if(project.hasProperty('newVersion')) {
			String s=buildFile.getText().replaceFirst("version = '$version'","version = '"+newVersion+"'")
			buildFile.setText(s)
		}
	}
}

ext.isReleaseVersion = !version.endsWith("SNAPSHOT")

if (!project.hasProperty("centralUser")) {
	ext.centralUser = 'test'
}
if (!project.hasProperty("centralPassword")) {
	ext.centralPassword = 'test'
}

java {
	withJavadocJar()
	withSourcesJar()
}

jar {
	manifest { 
		attributes "Main-Class": 'io.reliza.versioning.VersionCli'
	}  
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}
}

test {
  useJUnitPlatform()
}
publishing {
	publications {
		versioning(MavenPublication) {
			artifactId = 'versioning'
			from components.java
			pom {
				name = 'versioning'
				description = 'Reliza Versioning allows for automatic generation and bumping of CalVer or SemVer or custom version schemas.'
				url = 'https://reliza.io'
				licenses {
					license {
						name = 'MIT License'
						url = 'https://github.com/relizaio/versioning/blob/main/LICENSE'
					}
				}
				developers {
					developer {
						id = 'taleodor'
						name = 'Pavel Shukhman'
						email = 'info@reliza.io'
					}
				}
				scm {
					connection = 'scm:git:git://github.com/relizaio/versioning.git'
					developerConnection = 'scm:git:ssh://github.com/relizaio/versioning.git'
					url = 'https://github.com/relizaio/versioning/'
				}
			}
		}
	}
	
	repositories {
		maven {
			name = 'central'
			url = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
			credentials {
				username "$centralUser"
				password "$centralPassword"
			}
		}
	}

}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

tasks.withType(Sign) {
    onlyIf { gradle.taskGraph.hasTask(":publishAllPublicationsToCentralRepository") }
}

signing {
    def signingKey = GPG_SIGNING_KEY
    def signingPassword = GPG_SIGNING_PASSWORD
    useInMemoryPgpKeys(signingKey, signingPassword)
    sign publishing.publications.versioning
}

graalvmNative {
	binaries.all {
		resources.autodetect()
	}
	testSupport = true
	toolchainDetection = true
    binaries {
        main {
            // Main options
			// sharedLibrary = false
            imageName = 'versioning' // The name of the native image, defaults to the project name
            mainClass = 'io.reliza.versioning.VersionCli' // The main class to use, defaults to the application.mainClass
            sharedLibrary = false // Determines if image is a shared library, defaults to false if `java-library` plugin isn't included
        
        
            useFatJar = true // Instead of passing each jar individually, builds a fat jar
			javaLauncher = javaToolchains.launcherFor {
                languageVersion = JavaLanguageVersion.of(17)
                vendor = JvmVendorSpec.matching("GraalVM Community")
            }
			buildArgs.add('--no-fallback') 
			buildArgs.add('--static') 
        }
    }
}

